Add tests and linting

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -11,8 +11,8 @@
 .activity-pub-status {
   padding: 2px 8px;
   border-radius: var(--d-border-radius);
-  font-size: .9em;
-  line-height: .9em;
+  font-size: 0.9em;
+  line-height: 0.9em;
   background-color: var(--primary-200);
   display: inline-flex;
   align-items: center;
