Add username handling and validation

--- a/assets/javascripts/discourse/connectors/category-custom-settings/activity-pub-category-settings.hbs
+++ b/assets/javascripts/discourse/connectors/category-custom-settings/activity-pub-category-settings.hbs
@@ -3,16 +3,35 @@
   <ActivityPubStatus @model={{this.category}} @modelType="category" />
 </div>
 
-<section class='field'>
+<section class='field actvitiy-pub-enabled'>
   <label>
     <Input @type="checkbox" @checked={{this.category.custom_fields.activity_pub_enabled}} />
     {{i18n 'category.discourse_activity_pub.enable'}}
   </label>
 </section>
 
-<section class='field'>
+<section class='field activity-pub-show-status'>
   <label>
     <Input @type="checkbox" @checked={{this.category.custom_fields.activity_pub_show_status}} />
     {{i18n 'category.discourse_activity_pub.show_status'}}
   </label>
 </section>
+
+{{#if this.category.activity_pub_username}}
+  <section class='field activity-pub-handle-field'>
+    <label>{{i18n 'category.discourse_activity_pub.handle'}}</label>
+    {{activity-pub-handle this.category}}
+    <div class="instructions">
+      {{i18n 'category.discourse_activity_pub.handle_description'}}
+    </div>
+  </section>
+
+{{else}}
+  <section class='field activity-pub-username'>
+    <label for="activity-pub-username">{{i18n 'category.discourse_activity_pub.username'}}</label>
+    <Input id="activity-pub-username" @value={{this.category.custom_fields.activity_pub_username}} />
+    <div class="instructions">
+      {{i18n 'category.discourse_activity_pub.username_description'}}
+    </div>
+  </section>
+{{/if}}
