--- a/assets/javascripts/discourse/components/activity-pub-discovery.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-discovery.hbs
@@ -6,8 +6,8 @@
   />
   {{#if showDropdown}}
     <div class="activity-pub-discovery-dropdown">
-      <span>{{i18n "discourse_activity_pub.discovery.description" username=this.args.category.activity_pub_username}}</span>
-      <ActivityPubHandle @actor={{this.args.category}} />
+      <span>{{i18n "discourse_activity_pub.discovery.description" username=@category.activity_pub_username}}</span>
+      <ActivityPubHandle @actor={{@category}} />
     </div>
   {{/if}}
 </div>
