Use deleted_at handling for AP post objects
- Remove AP post delete undo restrictions.
- Add deleted_at property to AP posts.
- Surface deleted_at in AP UI.
- Add AP topic acceptance tests.

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -110,12 +110,10 @@
   &.published .d-icon {
     color: var(--success);
   }
-
-  &.not-published .d-icon {
+  &.scheduled .d-icon {
     color: var(--primary-medium);
   }
-}
-
-.deleted nav.post-controls button[disabled="true"] .d-icon {
-  color: var(--danger-low) !important;
+  &.deleted .d-icon {
+    color: var(--danger);
+  }
 }
