--- a/assets/javascripts/discourse/connectors/before-create-topic-button/discovery-activity-pub-handle.hbs
+++ b/assets/javascripts/discourse/connectors/before-create-topic-button/discovery-activity-pub-handle.hbs
@@ -1,3 +1,3 @@
-{{#if this.category.activity_pub_ready}}
+{{#if this.category.activity_pub_show_handle}}
   <ActivityPubDiscovery @category={{this.category}} />
 {{/if}}
