Add explicit scheduled_at storage and handling

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -110,7 +110,8 @@
   &.published .d-icon {
     color: var(--success);
   }
-  &.scheduled .d-icon {
+  &.scheduled .d-icon,
+  &.scheduled-past .d-icon {
     color: var(--primary-medium);
   }
   &.deleted .d-icon {
