Add Update activity support to first post only

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -107,7 +107,8 @@
 }
 
 .post-info.activity-pub {
-  &.published .d-icon {
+  &.published .d-icon,
+  &.updated .d-icon {
     color: var(--success);
   }
   &.scheduled .d-icon,
