--- a/assets/javascripts/discourse/connectors/category-custom-settings/activity-pub-category-settings.hbs
+++ b/assets/javascripts/discourse/connectors/category-custom-settings/activity-pub-category-settings.hbs
@@ -62,3 +62,14 @@
     {{i18n 'category.discourse_activity_pub.name_description'}}
   </div>
 </section>
+
+<section class='field activity-pub-setting activity-pub-default-visibility'>
+  <label for="activity-pub-default-visibility">{{i18n 'category.discourse_activity_pub.default_visibility'}}</label>
+  <ActivityPubVisibilityDropdown
+    @value={{this.category.custom_fields.activity_pub_default_visibility}}
+    @onChange={{action (mut this.category.custom_fields.activity_pub_default_visibility)}}
+  />
+  <div class="activity-pub-setting-description">
+    {{i18n 'category.discourse_activity_pub.default_visibility_description'}}
+  </div>
+</section>
