Add Article support on a per-category basis
An Article is for when you don't want to restrict the length of the content being federated (i.e. you want to federate entire posts). Note that Mastodon currently converts the content of Article types into a link, however platforms like Lemmy will show the full content. See further https://github.com/mastodon/mastodon/issues/24079

--- a/assets/javascripts/discourse/connectors/category-custom-settings/activity-pub-category-settings.hbs
+++ b/assets/javascripts/discourse/connectors/category-custom-settings/activity-pub-category-settings.hbs
@@ -73,3 +73,14 @@
     {{i18n 'category.discourse_activity_pub.default_visibility_description'}}
   </div>
 </section>
+
+<section class='field activity-pub-setting activity-pub-post-object-type'>
+  <label for="activity-pub-post-object-type">{{i18n 'category.discourse_activity_pub.post_object_type'}}</label>
+  <ActivityPubPostObjectTypeDropdown
+    @value={{this.category.custom_fields.activity_pub_post_object_type}}
+    @onChange={{action (mut this.category.custom_fields.activity_pub_post_object_type)}}
+  />
+  <div class="activity-pub-setting-description">
+    {{i18n 'category.discourse_activity_pub.post_object_type_description'}}
+  </div>
+</section>
