--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -132,7 +132,8 @@
   }
 }
 
-.activity-pub-visibility-dropdown {
+.activity-pub-visibility-dropdown,
+.activity-pub-post-object-type-dropdown {
   .select-kit-header {
     padding: 4px 6px;
   }
