--- a/assets/javascripts/discourse/components/activity-pub-status.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-status.hbs
@@ -1,13 +1,4 @@
 <div class="activity-pub-status {{this.statusClass}}" title={{this.translatedTitle}}>
   {{d-icon "discourse-activity-pub"}}
-  {{#unless forComposer}}
-    <span class="label">{{i18n (concat "discourse_activity_pub.status.label." this.labelKey)}}</span>
-  {{/unless}}
+  <span class="label" title={{this.translatedLabelTitle}}>{{this.translatedLabel}}</span>
 </div>
-
-{{#if forComposer}}
-  <ActivityPubVisibilityDropdown
-    @value={{@model.activity_pub_visibility}}
-    @onChange={{action (mut @model.activity_pub_visibility)}}
-  />
-{{/if}}
