FEATURE: Audience targeting settings (#19)
Adds a category setting to set default audience targeting (public or followers only). Changes default to public. And updates badges in the composer to show the selected audience target.

--- a/assets/javascripts/discourse/components/activity-pub-status.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-status.hbs
@@ -1,4 +1,4 @@
 <div class="activity-pub-status {{this.statusClass}}" title={{this.translatedTitle}}>
   {{d-icon "discourse-activity-pub"}}
-  <span>{{i18n (concat "discourse_activity_pub.status.label." this.labelKey)}}</span>
+  <span class="label" title={{this.translatedLabelTitle}}>{{this.translatedLabel}}</span>
 </div>
