--- a/assets/javascripts/discourse/components/modal/activity-pub-post-info.hbs
+++ b/assets/javascripts/discourse/components/modal/activity-pub-post-info.hbs
@@ -9,7 +9,7 @@
       <span class="activity-pub-visibility">{{d-icon this.visibilityIcon}}{{this.visibilityText}}</span>
       {{#unless @model.post.activity_pub_local}}
         <span class="activity-pub-url">
-          <a href={{@model.post.activity_pub_url}} target="_blank">
+          <a href={{@model.post.activity_pub_url}} target="_blank" rel="noopener noreferrer">
             {{d-icon "external-link-alt"}}
             {{this.urlText}}
           </a>
