--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -1,3 +1,5 @@
+@import "common/components/buttons";
+
 .activity-pub-category-settings-title {
   display: flex;
   align-items: center;
@@ -146,5 +148,47 @@
     display: flex;
     align-items: center;
     gap: 0.5em;
+  }
+}
+
+body.user-preferences-activity-pub-page {
+  .form-vertical {
+    width: 100%;
+  }
+}
+
+.activity-pub-authorize-controls {
+  display: flex;
+  gap: 0.5em;
+}
+
+.activity-pub-authorize-verified-domain {
+  display: flex;
+
+  label {
+    @include btn;
+    cursor: unset;
+  }
+}
+
+.activity-pub-authorizations {
+  margin-top: 1em;
+
+  ul {
+    list-style: none;
+    margin: 0;
+
+    li {
+      margin: 1em 0;
+    }
+  }
+
+  .activity-pub-authorization {
+    display: inline-flex;
+    align-items: center;
+  }
+
+  .activity-pub-authorization-link {
+    @include btn;
   }
 }
