FIX: Conflict with chat button
Importing `common/components/buttons` causes those styles to apply again
and override styles on buttons with similar class names.

--- a/assets/javascripts/discourse/components/activity-pub-authorization.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-authorization.hbs
@@ -1,7 +1,7 @@
 <div class="activity-pub-authorization">
   <a
     href={{@authorization.actor_id}}
-    class="activity-pub-authorization-link"
+    class="activity-pub-authorization-link btn"
     target="_blank"
     rel="noopener noreferrer">
     {{d-icon "external-link-alt"}}
