--- a/assets/javascripts/discourse/components/activity-pub-follow-btn.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-follow-btn.hbs
@@ -1,8 +1,10 @@
 <div class="activity-pub-follow-btn">
-  <DButton
-    @icon="discourse-activity-pub"
-    @action={{action "showModal"}}
-    @label="discourse_activity_pub.follow.label"
-    @ariaLabel="discourse_activity_pub.follow.label"
+  <ActivityPubStatus
+     @model={{@category}}
+     @modelType="category"
+     @showTip={{true}}
+     @onClick={{this.showModal}}
+     @translatedLabel={{i18n 'discourse_activity_pub.follow.label'}}
+     @translatedTitle={{i18n 'discourse_activity_pub.follow.title' name=@category.name}}
   />
 </div>
