--- a/assets/javascripts/discourse/components/activity-pub-status.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-status.hbs
@@ -1,16 +1,4 @@
-<div class="activity-pub-status {{this.statusClass}}" title={{this.translatedTitle}}>
+<div class={{this.classes}} title={{this.translatedTitle}} {{on "click" this.click}}>
   {{d-icon "discourse-activity-pub"}}
-  <span class="label" title={{this.translatedLabelTitle}}>{{this.translatedLabel}}</span>
+  <span class="label">{{this.translatedLabel}}</span>
 </div>
-
-{{#if @showTip}}
-  <div class="activity-pub-status-tip">
-    <DTooltip @theme="user-tip" @icon="info-circle" @arrow={{true}}>
-      <div class="user-tip__container">
-        <div class="user-tip__content">
-          {{i18n "discourse_activity_pub.tip.status.description"}}
-        </div>
-      </div>
-    </DTooltip>
-  </div>
-{{/if}}
