--- a/assets/javascripts/discourse/components/activity-pub-status.hbs
+++ b/assets/javascripts/discourse/components/activity-pub-status.hbs
@@ -1,4 +1,4 @@
-<div class={{this.classes}} title={{this.translatedTitle}} {{on "click" this.click}}>
+<div class={{this.classes}} title={{this.translatedTitle}} {{on "click" this.click}} role="button">
   {{d-icon "discourse-activity-pub"}}
   <span class="label">{{this.translatedLabel}}</span>
 </div>
